# codex

./: .bazelrc  justfile
.github/scripts/: run-bazel-ci.sh  run-bazel-query-ci.sh  run_bazel_with_buildbuddy.py  rusty_v8_bazel.py  test_run_bazel_with_buildbuddy.py  test_rusty_v8_bazel.py
.github/workflows/: bazel.yml  rust-ci-full.yml  rust-ci.yml  rusty-v8-release.yml  sdk.yml  v8-canary.yml
codex-rs/: Cargo.toml  deny.toml
codex-rs/.cargo/: audit.toml
codex-rs/agent-identity/src/: lib.rs
codex-rs/analytics/src/: analytics_client_tests.rs  client.rs  client_tests.rs  events.rs  facts.rs  lib.rs  reducer.rs
codex-rs/app-server/: Cargo.toml  README.md
codex-rs/app-server-client/src/: lib.rs  remote.rs
codex-rs/app-server-protocol/src/: export.rs
codex-rs/app-server-test-client/src/: lib.rs
codex-rs/app-server/src/: bespoke_event_handling.rs  config_manager.rs  config_manager_service.rs  config_manager_service_tests.rs  in_process.rs  lib.rs  message_processor.rs  message_processor_tracing_tests.rs  request_processors.rs  runtime_install_worker.rs  thread_state.rs
codex-rs/arg0/: Cargo.toml
codex-rs/arg0/src/: lib.rs
codex-rs/aws-auth/src/: lib.rs
codex-rs/backend-client/src/: client.rs  lib.rs  types.rs
codex-rs/chatgpt/src/: connectors.rs
codex-rs/cli/: Cargo.toml
codex-rs/cli/src/: doctor.rs  lib.rs  login.rs  main.rs
codex-rs/cli/tests/: exec_server.rs
codex-rs/cloud-config/src/: cache.rs  cache_tests.rs  loader.rs  loader_tests.rs  service_tests.rs
codex-rs/cloud-requirements/src/: lib.rs
codex-rs/cloud-tasks/src/: util.rs
codex-rs/codex-api/src/: common.rs  files.rs  lib.rs
codex-rs/codex-api/tests/: clients.rs
codex-rs/codex-client/: Cargo.toml
codex-rs/codex-client/src/: outbound_proxy.rs  route_diagnostics.rs
codex-rs/codex-mcp/src/: connection_manager.rs  connection_manager_tests.rs  elicitation.rs  lib.rs  rmcp_client.rs  tools.rs
codex-rs/config/src/: cloud_config_bundle.rs  cloud_config_layers_tests.rs  config_requirements.rs  diagnostics.rs  lib.rs  state.rs  state_tests.rs  tui_keymap.rs
codex-rs/core/: config.schema.json
codex-rs/core-api/src/: lib.rs
codex-rs/core-plugins/: Cargo.toml
codex-rs/core-plugins/src/: app_bundled_internal.rs  app_bundled_internal_tests.rs  capabilities.rs  capabilities_tests.rs  discoverable.rs  lib.rs  loader.rs  loader_tests.rs  manager.rs  manager_tests.rs  marketplace.rs  remote.rs  remote_bundle.rs  store.rs  store_tests.rs  (+1 more)
codex-rs/desktop-distribution/: BUILD.bazel  Cargo.toml
codex-rs/desktop-distribution/src/: lib.rs  lib_tests.rs  macos.rs  unsupported.rs  windows.rs
codex-rs/docs/: bazel.md
codex-rs/exec-server/: BUILD.bazel  Cargo.toml
codex-rs/login/: Cargo.toml
codex-rs/models-manager/: models.json
codex-rs/runtime-install/: BUILD.bazel  Cargo.toml
codex-rs/runtime-install/src/: errors.rs  helper.rs  installer.rs  lib.rs
codex-rs/sandboxing/: Cargo.toml
codex-rs/windows-sandbox-rs/: Cargo.toml
codex-rs/workload-identity-aws/: BUILD.bazel  Cargo.toml
codex-rs/workload-identity-aws/src/: lib.rs  lib_tests.rs
codex-rs/workload-identity-providers/: Cargo.toml
codex-rs/workload-identity-providers/src/: lib.rs
tools/argument-comment-lint/: test_wrapper_common.py
(+513 files in other folders)
