[package]
name = "codex-desktop-distribution"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "codex_desktop_distribution"
path = "src/lib.rs"
doctest = false

[lints]
workspace = true

[dependencies]
dunce = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
